@@ -31,6 +31,7 @@
 #include <gsl/gsl_math.h>
 #include <gsl/gsl_errno.h>
 #include <gsl/gsl_test.h>
+#include <gsl/gsl_ieee_utils.h>
 
 #include <gsl/gsl_rng.h>
 #include <gsl/gsl_monte_vegas.h>
@@ -78,6 +79,7 @@ int main()
 
   gsl_set_error_handler (&my_error_handler);
 
+  gsl_ieee_env_setup (); 
   
   printf("testing allocation/input checks\n");
 
